# ruian2pg

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
ansible/: .gitignore  README.md  ansible.cfg
ansible/files/sql/: migrate_notice_boards_v4.sql  setup_indexes.sql  setup_notice_boards_db.sql
ansible/inventory/: hosts.yml
ansible/inventory/group_vars/all/: main.yml  vault.yml
ansible/playbooks/: backup.yml  database.yml  maintenance.yml  restore.yml  site.yml
ansible/roles/certbot/tasks/: main.yml
ansible/roles/common/handlers/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/common/templates/: 50unattended-upgrades.j2
ansible/roles/docker/tasks/: main.yml
ansible/roles/martin/handlers/: main.yml
ansible/roles/martin/tasks/: main.yml
ansible/roles/martin/templates/: martin.yaml.j2
ansible/roles/nginx/tasks/: main.yml
ansible/roles/nginx/templates/: ruian.conf.j2  tile-cache.conf.j2
ansible/roles/postgresql/tasks/: main.yml
ansible/roles/ruian_app/tasks/: main.yml
ansible/roles/ruian_app/templates/: env.j2  ruian-ofn-sync.service.j2  ruian-ofn-sync.timer.j2  ruian-text-extract.service.j2  ruian-text-extract.timer.j2
data/: .gitkeep
martin/: martin.yaml
scripts/: __init__.py  download_attachments.py  download_documents.py  download_ofn_documents.py  download_ruian.py  extract_text.py  fetch_notice_boards.py  generate_test_references.py  import_notice_boards.py  import_ruian.py  migrate_notice_boards_v2.sql  migrate_notice_boards_v3.sql  migrate_notice_boards_v5.sql  migrate_notice_boards_v6.sql  migrate_notice_boards_v7.sql  migrate_notice_boards_v8.sql  migrate_notice_boards_v9.sql  migrate_texts_to_sqlite.py  setup_notice_boards_db.sql  sync_edesky_boards.py
src/notice_boards/: __init__.py  config.py  models.py  repository.py  scraper_config.py  storage.py  validators.py
src/notice_boards/parsers/: __init__.py  base.py  docling_extractor.py  pdf.py  references.py
src/notice_boards/scrapers/: __init__.py  base.py  edesky.py  ofn.py
src/notice_boards/services/: __init__.py  attachment_downloader.py  sqlite_text_storage.py  text_extractor.py
src/ruian_import/: __init__.py  config.py  downloader.py  importer.py
tests/: __init__.py  test_config.py  test_downloader.py  test_edesky_scraper.py  test_edesky_sync.py  test_importer.py  test_notice_board_scripts.py  test_ofn_scraper.py  test_sqlite_text_storage.py  test_storage.py  test_text_extractor.py  test_validators.py
web/: index.html
